[package]
name = "gannet"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.35.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
macaddr = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"