[package]
name = "gannet"
version = "0.1.0"
edition = "2021"

[features]
default = ["raw"]
raw = ["dep:pnet"]
termux = []

[dependencies]
pnet = { version = "0.35.0", optional = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
macaddr = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.6.3", features = ["all"] }